[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ribotree_pyodide"
version = "2.0.2"
description = "Monte Carlo Tree Search for RNA sequence design - Pyodide compatible"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DasLab"},
]
keywords = ["RNA", "MCTS", "sequence-design", "bioinformatics", "pyodide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/DasLab/ribotree-mrna"
Repository = "https://github.com/DasLab/ribotree-mrna"

[tool.setuptools]
packages = ["ribotree", "ribotree.arnie", "ribotree.DegScore"]
